--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/admissions/discharge/add_discharge.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/medication/admissions/discharge/add_discharge.html
@@ -5,8 +5,8 @@
  <a href="{% allif_get_single_nav_link_url 'Transactions' user_var glblslug %}">Transactions</a>
   <a href="{% allif_get_single_nav_link_url 'triagedata' user_var glblslug %}">Triage</a>
   <a href="{% allif_get_single_nav_link_url 'MedicalAssessments' user_var glblslug %}">Assessments</a>
-  <a href="{% allif_get_single_nav_link_url 'LabTests' user_var glblslug %}">Lab Tests</a>
-  <a href="{% allif_get_single_nav_link_url 'LabResults' user_var glblslug %}">Results</a>
+  <a href="{% allif_get_single_nav_link_url 'Tests' user_var glblslug %}">Lab Tests</a>
+  <a href="{% allif_get_single_nav_link_url 'Results' user_var glblslug %}">Results</a>
   <a href="{% allif_get_single_nav_link_url 'prescriptions' user_var glblslug %}">Prescriptions</a>
 {% endblock %}
 {% block details-table-col-one %}
