--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifmaaluibase.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/uimainbase/allifmaaluibase.html
@@ -25,6 +25,11 @@
     <!--below is for the dropdown of the select2 lib-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
 
+
+</script>
+<!--Chartjs CDN-->
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
     {% block style %}
 
     {% endblock %}
