--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -7,6 +7,7 @@
   <a href="{% allif_get_single_nav_link_url 'Branches' user_var glblslug %}">Branches</a>
   <a href="{% allif_get_single_nav_link_url 'Departments' user_var glblslug %}">Departments</a>
   <a href="{% allif_get_single_nav_link_url 'OperationYears' user_var glblslug %}">Years</a>
+  <a href="{% url 'allifmaalcommonapp:test' %}">test</a>
   {%endblock%}
 
   {% block details-table-col-one %}
