--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/home/home.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/home/home.html
@@ -1,349 +1,13 @@
-{% extends 'allifmaalshaafiapp/base/uimainbase/shaafibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
+{% extends 'allifmaalcommonapp/base/dashboard/dashboard.html'%}
+{% load allif_navigation_tags %}
+
+{% block allif_info_card_one %}
+<div class="allif-info-card-heading">Waiting</div>
+<div class="d-flex align-items-center">
+    <i class="bi bi-person text-primary fs-2 me-3"></i>
+    <div>
+    <a href="{% allif_get_single_nav_link_url 'Customers' user_var glblslug %}">{{card_one_numner}}</a>
+        
+    </div>
+</div>
 {%endblock%}
-   
-{% block body %}
-
-<div class="allifmaal-main-container">
-    <!--we can insert the other section here-->
-     
-      <!--start....main headere-->
-      <div class="card-header">
-        <div class="row mt-12" ><!--start....header row-->
-        <div class="col-md-12"><!--start....header column-->
-        <div class="container-fluid amel-content-header">
-        
-            <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-             <a href="{% url 'allifmaalshaafiapp:triageData' user_var glblslug %}">Triage</a>
-              <a href="">Doctor Assessments</a>
-               <a href="">Lab Test Requests</a>
-                <a href="">Lab Test Results</a>
-         
-            <a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}">Prescriptions</a>
-            <a href="{% url 'allifmaalshaafiapp:treatments' user_var glblslug %}">Treatments</a>
-             <a href="{% url 'allifmaalshaafiapp:admissions' user_var glblslug %}">Admissions</a>
-             <a href="{% url 'allifmaalshaafiapp:discharges' user_var glblslug %}">Discharges</a>
-             <a href="{% url 'allifmaalshaafiapp:referrals' user_var glblslug %}">Referrals</a>
-
-           
-        </div>
-          </div><!--end....header column-->
-          </div><!--end....header row-->
-        </div><!--end....main headere-->
-        
-    <div class="allifmaincontainer">
-       <!--start of first row-->
-       <div class="row mt-12" >
-          <div class="col-md-4">
-          <div class="card">
-          <div class="card-header allif-dashboard-card-header">
-            Top 10 Categories. <span>Total: <strong>{{catcount}}</strong></span>
-          </div>
-      
-          <div class="col-md-12">
-          <div class="column allif-dashboard-card-body">
-          
-    
-        <div class="allif-scroll-table">
-          <div class="table-responsive allif-full-table">
-          <table class="table table-layout">
-            <thead>
-              <tr class="allif-table-header-row">
-              <td>Categories</td>
-              <td>Votes</td>
-              </tr>
-              </thead>
-              <tbody class="allif-table-body">
-              {% for item in categories %} 
-              <tr data-id="{{item.id}}">
-              <td><a class="allif-table-links" href="">{{item.name}}</a></td>
-              <td>
-                {{item.votes|floatformat:2|intcomma}}
-              </td>
-             
-        
-          </tr>
-          {% endfor %}
-          
-            </tbody>
-          </table>
-          </div>
-         </div>
-      
-    
-      </div>
-      </div>
-      
-      
-      </div>
-      </div>
-      
-      <div class="col-md-4">
-        <div class="card">
-        <div class="card-header allif-dashboard-card-header">
-          Top 10 Companies. <span>Total: <strong>{{compcount}}</strong></span>
-        </div>
-    
-        <div class="col-md-12">
-        <div class="column allif-dashboard-card-body">
-        
-    
-      <div class="allif-scroll-table">
-        <div class="table-responsive allif-full-table">
-        <table class="table table-layout">
-          <thead>
-            <tr class="allif-table-header-row">
-            <td>Companies</td>
-            <td>Votes</td>
-            </tr>
-            </thead>
-            <tbody class="allif-table-body">
-             
-            
-            {% for item in companies %} 
-            <tr data-id="{{item.id}}">
-            <td><a class="allif-table-links" href="">{{item.name}}</a></td>
-           
-            <td>
-              {{item.votes|floatformat:2|intcomma}}
-            </td>
-        </tr>
-        {% endfor %}
-        
-          </tbody>
-        </table>
-        </div>
-       </div>
-    
-    
-    </div>
-    </div>
-    
-    
-    </div>
-    </div>
-    
-      
-    <div class="col-md-4">
-        <div class="card">
-        <div class="card-header allif-dashboard-card-header">
-          Top 10 Voters. <span>Total: <strong>{{voterscount}}</strong></span>
-        </div>
-    
-        <div class="col-md-12">
-        <div class="column allif-dashboard-card-body">
-        
-    
-      <div class="allif-scroll-table">
-        <div class="table-responsive allif-full-table">
-        <table class="table table-layout">
-          <thead>
-            <tr class="allif-table-header-row">
-            <td>Name</td>
-           
-            <td>Votes</td>
-        
-            </tr>
-            </thead>
-            <tbody class="allif-table-body">
-             
-            
-            {% for item in allifqueryset %} 
-            <tr data-id="{{item.id}}">
-            <td><a class="allif-table-links" href="">{{item.first_name}}</a></td>
-           
-            <td>
-              {{item.castedvotes|floatformat:2|intcomma}}
-            </td>
-        </tr>
-        {% endfor %}
-        
-          </tbody>
-        </table>
-        </div>
-       </div>
-    
-    
-    </div>
-    </div>
-    
-    
-    </div>
-    </div>
-    
-      </div>
-      
-      <!--end of first row-->
-      
-      <!--start of second row-->
-      
-       <!--start of first row-->
-       <div class="row mt-12" >
-        <div class="col-md-4">
-            <div class="card">
-            <div class="card-header allif-dashboard-card-header">
-              Top 10 Golden Sponsors. <span>Total: <strong>{{sponsorscount}}</strong></span>
-            </div>
-        
-            <div class="col-md-12">
-            <div class="column allif-dashboard-card-body">
-            
-      
-          <div class="allif-scroll-table">
-            <div class="table-responsive allif-full-table">
-            <table class="table table-layout">
-              <thead>
-                <tr class="allif-table-header-row">
-                <td>Sponsors</td>
-               
-                <td>Amounts</td>
-            
-                </tr>
-                </thead>
-                <tbody class="allif-table-body">
-                 
-                
-                {% for item in sponsors %} 
-                <tr data-id="{{item.id}}">
-                <td><a class="allif-table-links" href="">{{item.name}}</a></td>
-               
-               
-            <td>
-              {{item.amount|floatformat:2|intcomma}}
-            </td>
-            </tr>
-            {% endfor %}
-            
-              </tbody>
-            </table>
-            </div>
-           </div>
-        
-      
-        </div>
-        </div>
-        
-        
-        </div>
-        </div>
-        
-      
-        <div class="col-md-4">
-            <div class="card">
-            <div class="card-header allif-dashboard-card-header">
-              Top 10 Highest Expenses. <span>Total: <strong>{{expensescount}}</strong></span>
-            </div>
-        
-            <div class="col-md-12">
-            <div class="column allif-dashboard-card-body">
-            
-      
-          <div class="allif-scroll-table">
-            <div class="table-responsive allif-full-table">
-            <table class="table table-layout">
-              <thead>
-                <tr class="allif-table-header-row">
-                <td>Description</td>
-               
-                <td>Amount</td>
-            
-                </tr>
-                </thead>
-                <tbody class="allif-table-body">
-                 
-                
-                {% for item in expenses %} 
-                <tr data-id="{{item.id}}">
-                <td><a class="allif-table-links" href="">{{item.description}}</a></td>
-                  
-            <td>
-              {{item.amount|floatformat:2|intcomma}}
-            </td>
-            </tr>
-            {% endfor %}
-            
-              </tbody>
-            </table>
-            </div>
-           </div>
-        
-      
-        </div>
-        </div>
-        
-        
-        </div>
-        </div>
-        
-        <div class="col-md-4">
-            <div class="card">
-            <div class="card-header allif-dashboard-card-header">
-              10 Latest Votes. <span>Total: <strong>{{votescount}}</strong></span>
-            </div>
-        
-            <div class="col-md-12">
-            <div class="column allif-dashboard-card-body">
-            
-      
-          <div class="allif-scroll-table">
-            <div class="table-responsive allif-full-table">
-            <table class="table table-layout">
-              <thead>
-                <tr class="allif-table-header-row">
-                <td>Voter</td>
-               
-                <td>Date</td>
-             
-                </tr>
-                </thead>
-                <tbody class="allif-table-body">
-                 
-                
-                {% for item in votes %} 
-                <tr data-id="{{item.id}}">
-                <td><a class="allif-table-links" href="">{{item.voter}}</a></td>
-               
-                <td>
-                    {{item.date|date:'d/m/Y'}}
-                  </td>
-              
-               
-            </tr>
-            {% endfor %}
-            
-              </tbody>
-            </table>
-            </div>
-           </div>
-        
-      
-        </div>
-        </div>
-        
-        
-        </div>
-        </div>
-        
-      </div>
-      
-      <!--end of first row-->
-      
-      <!--start of second row-->
-      
-     
-    
-    </div><!--end of main container of the page-->
-    
-    
-     
-    <!--we can insert the other section here...-->
-    
-    </div>
-       
-    
-   {% endblock %}
-   
