--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/add-staff-profile.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/add-staff-profile.html
@@ -51,6 +51,11 @@
       <td class="allif-fix-table-col-forms">Salary Balance</td>
       <td>{{form.salary_balance}}</td>
     </tr>
+
+    <tr>
+      <td class="allif-fix-table-col-forms">Staff Category</td>
+      <td>{{form.staff_cat}}</td>
+    </tr>
     
     {%endblock%}
     {% block bottom-fields-col-one %}
