--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
@@ -13,6 +13,7 @@
   {% block allif-header-links %}
   <a href="{% allif_get_single_nav_link_url 'Staff' user_var glblslug %}">Employees</a>
   <a href="{% allif_get_single_nav_link_url 'AddUser' user_var glblslug %}">New User</a>
+  <a href="{% allif_get_single_nav_link_url 'StaffCats' user_var glblslug %}">Staff Categories</a>
   <a href="{% allif_get_single_nav_link_url 'Profiles' user_var glblslug %}">Staff Profiles</a>
   <a href="{% allif_get_single_nav_link_url 'Salaries' user_var glblslug %}">Salaries</a>
   
