--- a/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/add-invoice-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/add-invoice-details.html
@@ -60,8 +60,8 @@
     </tr>
  
       <tr>
-      <td class="allif-fix-table-col-forms">Likelyhood</td>
-      <td>{{form.prospect}}</td>
+      <td class="allif-fix-table-col-forms">Posting Status</td>
+      <td>{{form.posting_inv_status}}</td>
     </tr>
     {%endblock%}
 
